[package]
name = "reefdb"
version = "0.1.0"
edition = "2021"
description = "ReefDB is a minimalistic, in-memory and on-disk database management system written in Rust, implementing basic SQL query capabilities and full-text search."
license = "MIT"
readme = "README.md"
repository = "https://github.com/sachaarbonel/reefdb"
keywords = ["database", "sql", "full-text-search", "in-memory", "on-disk"]
categories = ["database", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
tempfile = "3.2"
rand = "0.8"
rust-stemmers = "1.2"
lazy_static = "1.4"
memmap2 = "0.5.10"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal", "net", "sync", "time"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
prost-types = "0.12"
bytes = "1"
serde_yaml = "0.9"
raft = { version = "0.7", optional = true }
protobuf = { version = "2", optional = true }
tokio-stream = "0.1"

[dev-dependencies]
axum = { version = "0.7" }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.11"

[features]
default = []
raft-core = []
raft-tikv = ["raft", "protobuf"]
