[package]
name = "reefdb"
version = "0.1.0"
edition = "2021"
description = "ReefDB is a minimalistic, in-memory and on-disk database management system written in Rust, implementing basic SQL query capabilities and full-text search."
license = "MIT"
readme = "README.md"
repository = "https://github.com/sachaarbonel/reefdb"
keywords = ["database", "sql", "full-text-search", "in-memory", "on-disk"]
categories = ["database", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
tempfile = "3.2"
rand = "0.8"
rust-stemmers = "1.2"
lazy_static = "1.4"
memmap2 = "0.5.10"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

[dev-dependencies]
